force-app/main/default/objects/Viaticos__c/Viaticos__c.object-meta.xml
<CustomObject>
    <description>Gestión de viáticos</description>
    <label>Viatico</label>
    <nameField>
        <displayFormat>SV- {00000000}</displayFormat>
        <label>Solicitud de Viáticos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Viaticos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>