force-app/main/default/objects/Viaticos__c/fields/Aerolinea__c.field-meta.xml
<CustomField>
    <fullName>Aerolinea__c</fullName>
    <formula>Solicitud_Vuelo__r.Aerolinea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aerolinea</label>
    <type>Text</type>
</CustomField>