force-app/main/default/objects/Viaticos__c/fields/Alimentos10__c.field-meta.xml
<CustomField>
    <fullName>Alimentos10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Alimentos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alimentos10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>