force-app/main/default/objects/Viaticos__c/fields/Alimentos1__c.field-meta.xml
<CustomField>
    <fullName>Alimentos1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Alimentos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alimentos1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>