force-app/main/default/objects/Viaticos__c/fields/Alimentos2__c.field-meta.xml
<CustomField>
    <fullName>Alimentos2__c</fullName>
    <formula>Programa_Viaje_Ruta2__r.Alimentos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alimentos2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>