force-app/main/default/objects/Viaticos__c/fields/Autorizacion_especial__c.field-meta.xml
<CustomField>
    <fullName>Autorizacion_especial__c</fullName>
    <formula>IF(Jefe_Directo__c =&quot;rreyes@imperquimia.com.mx&quot;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Autorizacion especial</label>
    <type>Checkbox</type>
</CustomField>