force-app/main/default/objects/Viaticos__c/fields/Caseta10__c.field-meta.xml
<CustomField>
    <fullName>Caseta10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Peajes_o_Casetas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caseta10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>