force-app/main/default/objects/Viaticos__c/fields/Caseta1__c.field-meta.xml
<CustomField>
    <fullName>Caseta1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Peajes_o_Casetas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caseta1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>