force-app/main/default/objects/Viaticos__c/fields/Centro_de_Costos__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_Costos__c</fullName>
    <formula>Owner:User.CeCo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centro de Costos</label>
    <type>Text</type>
</CustomField>