force-app/main/default/objects/Viaticos__c/fields/Dep_sito_Vi_ticos__c.field-meta.xml
<CustomField>
    <fullName>Dep_sito_Vi_ticos__c</fullName>
    <label>Depósito Viáticos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>