force-app/main/default/objects/Viaticos__c/fields/Departamento_del__c.field-meta.xml
<CustomField>
    <fullName>Departamento_del__c</fullName>
    <formula>TEXT(Owner:User.Equipo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento</label>
    <type>Text</type>
</CustomField>