force-app/main/default/objects/Viaticos__c/fields/Deposito_Combustible__c.field-meta.xml
<CustomField>
    <fullName>Deposito_Combustible__c</fullName>
    <label>Depósito Combustible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>