force-app/main/default/objects/Viaticos__c/fields/Des10__c.field-meta.xml
<CustomField>
    <fullName>Des10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Destino__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destino10</label>
    <type>Text</type>
</CustomField>