force-app/main/default/objects/Viaticos__c/fields/Des1__c.field-meta.xml
<CustomField>
    <fullName>Des1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Destino__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destino1</label>
    <type>Text</type>
</CustomField>