force-app/main/default/objects/Viaticos__c/fields/Des2__c.field-meta.xml
<CustomField>
    <fullName>Des2__c</fullName>
    <formula>Programa_Viaje_Ruta2__r.Destino__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destino2</label>
    <type>Text</type>
</CustomField>