force-app/main/default/objects/Viaticos__c/fields/Documento_SAP__c.field-meta.xml
<CustomField>
    <fullName>Documento_SAP__c</fullName>
    <label>Documento SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>