force-app/main/default/objects/Viaticos__c/fields/Estacionamiento10__c.field-meta.xml
<CustomField>
    <fullName>Estacionamiento10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Estacionamiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estacionamiento10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>