force-app/main/default/objects/Viaticos__c/fields/Estacionamiento1__c.field-meta.xml
<CustomField>
    <fullName>Estacionamiento1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Estacionamiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estacionamiento1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>