force-app/main/default/objects/Viaticos__c/fields/Estacionamiento2__c.field-meta.xml
<CustomField>
    <fullName>Estacionamiento2__c</fullName>
    <formula>Programa_Viaje_Ruta2__r.Estacionamiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estacionamiento2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>