force-app/main/default/objects/Viaticos__c/fields/Estatus_Solicitud_Avion__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Solicitud_Avion__c</fullName>
    <formula>TEXT( Solicitud_Vuelo__r.Estatus__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Solicitud de Avión</label>
    <type>Text</type>
</CustomField>