force-app/main/default/objects/Viaticos__c/fields/F1__c.field-meta.xml
<CustomField>
    <fullName>F1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Fecha__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha1</label>
    <type>Date</type>
</CustomField>