force-app/main/default/objects/Viaticos__c/fields/F2__c.field-meta.xml
<CustomField>
    <fullName>F2__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Fecha__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha2</label>
    <type>Date</type>
</CustomField>