force-app/main/default/objects/Viaticos__c/fields/F3__c.field-meta.xml
<CustomField>
    <fullName>F3__c</fullName>
    <formula>Programa_Viaje_Ruta3__r.Fecha__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha3</label>
    <type>Date</type>
</CustomField>