force-app/main/default/objects/Viaticos__c/fields/Fecha10__c.field-meta.xml
<CustomField>
    <fullName>Fecha10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Fecha__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F10</label>
    <type>Date</type>
</CustomField>