force-app/main/default/objects/Viaticos__c/fields/Fecha_fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_fin__c</fullName>
    <label>Fecha fin de viaje</label>
    <type>Date</type>
</CustomField>