force-app/main/default/objects/Viaticos__c/fields/Fecha_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio__c</fullName>
    <label>Fecha Inicio de Viaje</label>
    <type>Date</type>
</CustomField>