force-app/main/default/objects/Viaticos__c/fields/Fecha_regreso_vuelo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_regreso_vuelo__c</fullName>
    <formula>Solicitud_Vuelo__r.Fecha_y_Hora_de_Regreso__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha y hora de regreso</label>
    <type>DateTime</type>
</CustomField>