force-app/main/default/objects/Viaticos__c/fields/Fecha_salida_vuelo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_salida_vuelo__c</fullName>
    <formula>Solicitud_Vuelo__r.Fecha_y_Hora_de_Salida__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha y hora de salida</label>
    <type>DateTime</type>
</CustomField>