force-app/main/default/objects/Viaticos__c/fields/Gasolina10__c.field-meta.xml
<CustomField>
    <fullName>Gasolina10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Gasolina__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gasolina10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>