force-app/main/default/objects/Viaticos__c/fields/Gasolina1__c.field-meta.xml
<CustomField>
    <fullName>Gasolina1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Gasolina__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gasolina1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>