force-app/main/default/objects/Viaticos__c/fields/Gasolina2__c.field-meta.xml
<CustomField>
    <fullName>Gasolina2__c</fullName>
    <formula>Programa_Viaje_Ruta2__r.Gasolina__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gasolina2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>