force-app/main/default/objects/Viaticos__c/fields/Hoteles10__c.field-meta.xml
<CustomField>
    <fullName>Hoteles10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Hoteles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hoteles10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>