force-app/main/default/objects/Viaticos__c/fields/Hoteles1__c.field-meta.xml
<CustomField>
    <fullName>Hoteles1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Hoteles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hoteles1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>