force-app/main/default/objects/Viaticos__c/fields/Hoteles2__c.field-meta.xml
<CustomField>
    <fullName>Hoteles2__c</fullName>
    <formula>Programa_Viaje_Ruta2__r.Hoteles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hoteles2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>