force-app/main/default/objects/Viaticos__c/fields/Importe_letra__c.field-meta.xml
<CustomField>
    <fullName>Importe_letra__c</fullName>
    <label>Importe Letra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>