force-app/main/default/objects/Viaticos__c/fields/Internet10__c.field-meta.xml
<CustomField>
    <fullName>Internet10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Servicio_de_Internet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internet10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>