force-app/main/default/objects/Viaticos__c/fields/Internet1__c.field-meta.xml
<CustomField>
    <fullName>Internet1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Servicio_de_Internet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internet1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>