force-app/main/default/objects/Viaticos__c/fields/Jefe_Directo__c.field-meta.xml
<CustomField>
    <fullName>Jefe_Directo__c</fullName>
    <formula>Owner:User.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jefe Directo</label>
    <type>Text</type>
</CustomField>