force-app/main/default/objects/Viaticos__c/fields/Jefe_inmediato__c.field-meta.xml
<CustomField>
    <fullName>Jefe_inmediato__c</fullName>
    <formula>Owner:User.Manager.FirstName &amp;&quot; &quot;&amp; Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jefe inmediato</label>
    <type>Text</type>
</CustomField>