force-app/main/default/objects/Viaticos__c/fields/K10__c.field-meta.xml
<CustomField>
    <fullName>K10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Kms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kms10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>