force-app/main/default/objects/Viaticos__c/fields/K1__c.field-meta.xml
<CustomField>
    <fullName>K1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Kms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kms1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>