force-app/main/default/objects/Viaticos__c/fields/K2__c.field-meta.xml
<CustomField>
    <fullName>K2__c</fullName>
    <formula>Programa_Viaje_Ruta2__r.Kms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kms2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>