force-app/main/default/objects/Viaticos__c/fields/Mantto2__c.field-meta.xml
<CustomField>
    <fullName>Mantto2__c</fullName>
    <formula>Programa_Viaje_Ruta2__r.Mantto_o_Equipo_de_Transporte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mantto2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>