force-app/main/default/objects/Viaticos__c/fields/Mantto_o_Equipo_de_Transporte__c.field-meta.xml
<CustomField>
    <fullName>Mantto_o_Equipo_de_Transporte__c</fullName>
    <formula>Mantto1__c + Mantto2__c + Mantto3__c + Mantto4__c + Mantto5__c + Mantto6__c + Mantto7__c + Mantto8__c + Mantto9__c + Mantto10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mantto. o Equipo de Transporte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>