force-app/main/default/objects/Viaticos__c/fields/Monto_de_Venta1__c.field-meta.xml
<CustomField>
    <fullName>Monto_de_Venta1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Monto_de_venta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto de Venta1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>