force-app/main/default/objects/Viaticos__c/fields/Monto_Depositado_al_Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Monto_Depositado_al_Solicitante__c</fullName>
    <label>Monto Depositado al Solicitante:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>