force-app/main/default/objects/Viaticos__c/fields/Monto_Solicitado_por_el_Usuario__c.field-meta.xml
<CustomField>
    <fullName>Monto_Solicitado_por_el_Usuario__c</fullName>
    <formula>Alimentos__c + Estacionamiento__c + Gasolina__c + Hoteles__c + Mantto_o_Equipo_de_Transporte__c + Papeleria__c + Peajes_o_Casetas__c + Servicio_de_Internet__c + Taxis_Autobuses_Avi_n__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Solicitado por el Usuario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>