force-app/main/default/objects/Viaticos__c/fields/Objetivo10__c.field-meta.xml
<CustomField>
    <fullName>Objetivo10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Objetivo_del_viaje__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objetivo10</label>
    <type>Text</type>
</CustomField>