force-app/main/default/objects/Viaticos__c/fields/Objetivo1__c.field-meta.xml
<CustomField>
    <fullName>Objetivo1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Objetivo_del_viaje__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objetivo1</label>
    <type>Text</type>
</CustomField>