force-app/main/default/objects/Viaticos__c/fields/Objetivo2__c.field-meta.xml
<CustomField>
    <fullName>Objetivo2__c</fullName>
    <formula>Programa_Viaje_Ruta2__r.Objetivo_del_viaje__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objetivo2</label>
    <type>Text</type>
</CustomField>