force-app/main/default/objects/Viaticos__c/fields/Ori10__c.field-meta.xml
<CustomField>
    <fullName>Ori10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Origen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen10</label>
    <type>Text</type>
</CustomField>