force-app/main/default/objects/Viaticos__c/fields/Ori1__c.field-meta.xml
<CustomField>
    <fullName>Ori1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Origen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen1</label>
    <type>Text</type>
</CustomField>