force-app/main/default/objects/Viaticos__c/fields/Ori2__c.field-meta.xml
<CustomField>
    <fullName>Ori2__c</fullName>
    <formula>Programa_Viaje_Ruta2__r.Origen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen2</label>
    <type>Text</type>
</CustomField>