force-app/main/default/objects/Viaticos__c/fields/Origen_Destino10__c.field-meta.xml
<CustomField>
    <fullName>Origen_Destino10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Origen_Destino__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen / Destino10</label>
    <type>Text</type>
</CustomField>