force-app/main/default/objects/Viaticos__c/fields/Origen_Destino1__c.field-meta.xml
<CustomField>
    <fullName>Origen_Destino1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Origen_Destino__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen / Destino1</label>
    <type>Text</type>
</CustomField>