force-app/main/default/objects/Viaticos__c/fields/Origen_Destino2__c.field-meta.xml
<CustomField>
    <fullName>Origen_Destino2__c</fullName>
    <formula>Programa_Viaje_Ruta2__r.Origen_Destino__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen / Destino2</label>
    <type>Text</type>
</CustomField>