force-app/main/default/objects/Viaticos__c/fields/Pago_a_realizar_el_diav__c.field-meta.xml
<CustomField>
    <fullName>Pago_a_realizar_el_diav__c</fullName>
    <label>Pago a realizar el día</label>
    <type>Date</type>
</CustomField>