force-app/main/default/objects/Viaticos__c/fields/Papeleria10__c.field-meta.xml
<CustomField>
    <fullName>Papeleria10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Papeleria__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Papeleria10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>