force-app/main/default/objects/Viaticos__c/fields/Papeleria1__c.field-meta.xml
<CustomField>
    <fullName>Papeleria1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Papeleria__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Papeleria1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>