force-app/main/default/objects/Viaticos__c/fields/Papeleria2__c.field-meta.xml
<CustomField>
    <fullName>Papeleria2__c</fullName>
    <formula>Programa_Viaje_Ruta2__r.Papeleria__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Papeleria2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>