force-app/main/default/objects/Viaticos__c/fields/Peajes_o_Casetas__c.field-meta.xml
<CustomField>
    <fullName>Peajes_o_Casetas__c</fullName>
    <formula>Caseta1__c +  Caseta2__c +Caseta3__c  + Caseta4__c + Caseta5__c + Caseta6__c + Caseta7__c + Caseta8__c + Caseta9__c + Caseta10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peajes o Casetas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>