force-app/main/default/objects/Viaticos__c/fields/Placas__c.field-meta.xml
<CustomField>
    <fullName>Placas__c</fullName>
    <formula>Owner:User.Placas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placas</label>
    <type>Text</type>
</CustomField>