force-app/main/default/objects/Viaticos__c/fields/Programa_Viaje_Ruta3__c.field-meta.xml
<CustomField>
    <fullName>Programa_Viaje_Ruta3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ruta 3</label>
    <referenceTo>Programa_Viaje_Rutas__c</referenceTo>
    <relationshipName>Vi_ticos2</relationshipName>
    <type>Lookup</type>
</CustomField>