force-app/main/default/objects/Viaticos__c/fields/Rendimiento_por_litro__c.field-meta.xml
<CustomField>
    <fullName>Rendimiento_por_litro__c</fullName>
    <formula>Owner:User.Rendimiento_por_litro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rendimiento por litro</label>
    <type>Text</type>
</CustomField>