force-app/main/default/objects/Viaticos__c/fields/Resultado_esperado_del_viaje__c.field-meta.xml
<CustomField>
    <fullName>Resultado_esperado_del_viaje__c</fullName>
    <label>Resultado esperado del viaje</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>