force-app/main/default/objects/Viaticos__c/fields/ResultadoEsp10__c.field-meta.xml
<CustomField>
    <fullName>ResultadoEsp10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Resultado_esperado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResultadoEsp10</label>
    <type>Text</type>
</CustomField>