force-app/main/default/objects/Viaticos__c/fields/ResultadoEsp1__c.field-meta.xml
<CustomField>
    <fullName>ResultadoEsp1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.Resultado_esperado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResultadoEsp1</label>
    <type>Text</type>
</CustomField>