force-app/main/default/objects/Viaticos__c/fields/ResultadoEsp2__c.field-meta.xml
<CustomField>
    <fullName>ResultadoEsp2__c</fullName>
    <formula>Programa_Viaje_Ruta2__r.Resultado_esperado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResultadoEsp2</label>
    <type>Text</type>
</CustomField>