force-app/main/default/objects/Viaticos__c/fields/Servicio_de_Internet__c.field-meta.xml
<CustomField>
    <fullName>Servicio_de_Internet__c</fullName>
    <formula>Internet1__c + Internet2__c + Internet3__c + Internet4__c + Internet5__c + Internet6__c + Internet7__c + Internet8__c + Internet9__c + Internet10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Servicio de Internet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>