force-app/main/default/objects/Viaticos__c/fields/Solicitud_Vuelo__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_Vuelo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionado al objeto &quot;Solicitud de avión&quot;</description>
    <label>Solicitud de Vuelo</label>
    <referenceTo>Solicitud_de_Avi_n__c</referenceTo>
    <relationshipName>Vi_ticos</relationshipName>
    <type>Lookup</type>
</CustomField>