force-app/main/default/objects/Viaticos__c/fields/Submarca__c.field-meta.xml
<CustomField>
    <fullName>Submarca__c</fullName>
    <label>Submarca</label>
    <length>80</length>
    <type>Text</type>
</CustomField>