force-app/main/default/objects/Viaticos__c/fields/Taxi10__c.field-meta.xml
<CustomField>
    <fullName>Taxi10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.Taxis_Autobuses_Avi_n__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxi10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>