force-app/main/default/objects/Viaticos__c/fields/Taxi2__c.field-meta.xml
<CustomField>
    <fullName>Taxi2__c</fullName>
    <formula>Programa_Viaje_Ruta2__r.Taxis_Autobuses_Avi_n__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxi2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>