force-app/main/default/objects/Viaticos__c/fields/Taxis_Autobuses_Avi_n__c.field-meta.xml
<CustomField>
    <fullName>Taxis_Autobuses_Avi_n__c</fullName>
    <formula>Taxi__c + Taxi2__c + Taxi3__c + Taxi4__c + Taxi5__c + Taxi6__c + Taxi7__c + Taxi8__c + Taxi9__c + Taxi10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxis, Autobuses,Avión</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>