force-app/main/default/objects/Viaticos__c/fields/Tipo_de_Gasto10__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Gasto10__c</fullName>
    <label>Tipo de Gasto10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Gasto</valueSetName>
    </valueSet>
</CustomField>