force-app/main/default/objects/Viaticos__c/fields/Total_de_Venta_Estimada__c.field-meta.xml
<CustomField>
    <fullName>Total_de_Venta_Estimada__c</fullName>
    <formula>Monto_de_Venta1__c + Monto_de_Venta2__c +Monto_de_Venta3__c+Monto_de_Venta4__c+Monto_de_Venta5__c+Monto_de_Venta6__c+Monto_de_Venta7__c+Monto_de_Venta8__c+Monto_de_Venta9__c+Monto_de_Venta10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monto de Venta Esperado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>