force-app/main/default/objects/Viaticos__c/fields/Validaci_n_de_Combustible__c.field-meta.xml
<CustomField>
    <fullName>Validaci_n_de_Combustible__c</fullName>
    <formula>IF( Gasolina__c =0,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validación de Combustible</label>
    <type>Checkbox</type>
</CustomField>