force-app/main/default/objects/Viaticos__c/fields/Visitado10__c.field-meta.xml
<CustomField>
    <fullName>Visitado10__c</fullName>
    <formula>Programa_Viaje_Ruta10__r.A_quien_visita__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿A quién visita?10</label>
    <type>Text</type>
</CustomField>