force-app/main/default/objects/Viaticos__c/fields/Visitado2__c.field-meta.xml
<CustomField>
    <fullName>Visitado2__c</fullName>
    <formula>Programa_Viaje_Ruta2__r.A_quien_visita__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿A quién visita?2</label>
    <type>Text</type>
</CustomField>