force-app/main/default/objects/Viaticos__c/fields/Visitado3__c.field-meta.xml
<CustomField>
    <fullName>Visitado3__c</fullName>
    <formula>Programa_Viaje_Ruta3__r.A_quien_visita__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿A quién visita?3</label>
    <type>Text</type>
</CustomField>