force-app/main/default/objects/Viaticos__c/fields/Visitado_R1__c.field-meta.xml
<CustomField>
    <fullName>Visitado_R1__c</fullName>
    <formula>Programa_Viaje_Ruta__r.A_quien_visita__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿A quién visita?1</label>
    <type>Text</type>
</CustomField>